--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
 extends layout
 
+block head
+  script(src="https://cdn.socket.io/socket.io-1.3.4.js")
+  script(src="/javascripts/client.js")
+
 block content
   h1= title
   p Welcome to #{title}
