--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,9 @@
 extends layout
 
 block head
+  script(src="https://code.jquery.com/jquery-1.11.2.min.js")
   script(src="https://cdn.socket.io/socket.io-1.3.4.js")
   script(src="/javascripts/client.js")
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div#imgWindow
